# personal_finance

./: .gitignore  Finanças pessoais.webm  LICENSE  README.md  compare_models.ipynb  main.py  pyproject.toml  requirements.txt  test_ai_reader.ipynb
assets/: dashAgGridComponentFunctions.js  styles.css
data/: expenses.csv  incomes.csv  input_table_example.csv
database/ml/: subcat_vectorizer.joblib
database/sql_queries/: create_transactions_table.sql  get_transactions.sql  insert_transaction.sql
expenses/: app.py
expenses/assets/: dashAgGridComponentFunctions.js  styles.css
expenses/components/: bank_error_alert.py  collapsed_graphs.py  confirm_dialog.py  dropdown_menus.py  expenses_card.py  ids.py  layout.py  predict_btn.py  remove_rows_btn.py  save_btn.py  upper_buttons.py
expenses/data/: loader.py  predictor.py  processor.py  schema.py  source.py
locale/: category.en.yml  category.pt.yml  columns.en.yml  columns.pt.yml  general.en.yml  general.pt.yml  inc_category.en.yml  inc_category.pt.yml  subcategory.en.yml  subcategory.pt.yml
personal_finance/: app.py
personal_finance/assets/: dashAgGridComponentFunctions.js  styles.css
personal_finance/components/: balance_card.py  collapsed_graphs.py  confirm_dialog.py  dropdown_menus.py  evolution_tab.py  expenses_card.py  ids.py  incomes_card.py  layout.py  monthly_tab.py  predict_btn.py  remove_rows_btn.py  save_btn.py  tables_tab.py
personal_finance/data/: loader.py  predictor.py  schema.py  source.py
src/components/: balance_card.py  confirm_dialog.py  dashboard_tab.py  evolution_tab.py  ids.py  (+10 more)
(+117 files in other folders)
