[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["llazzari <lucas.lazzari@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
plotly = "^5.18.0"
pandas = "^2.1.4"
babel = "^2.14.0"
unidecode = "^1.3.8"
nltk = "^3.8.1"
dash-bootstrap-templates = "^1.1.2"
dash-ag-grid = "^31.0.1"
pyyaml = "^6.0.1"
python-i18n = {extras = ["yaml"], version = "^0.3.9"}
dash-mantine-components = "^0.12.1"
google-generativeai = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
